# mobileRobot

./: .gitignore
a_star_experiment/: CMakeLists.txt  package.xml
a_star_experiment/include/: a_star.h
a_star_experiment/launch/: lab5.launch
a_star_experiment/map/: 402_resize.pgm
a_star_experiment/src/: Navigator.cpp  map_cal.cpp  nav.cpp  tf_pos.cpp
a_star_simulation/: CMakeLists.txt  package.xml
a_star_simulation/assets/: map.csv  readcsv.cpp
a_star_simulation/include/: a-star.h  a_star.h
a_star_simulation/launch/: lab4.launch  lab5_sim.launch  lab6_sim.launch  planning.launch
a_star_simulation/map/: 505.yaml  lab4_map.pgm  lab4_map.yaml
a_star_simulation/src/: .map_astar.cpp.swp  a_star.cpp  a_star_planning.cpp  map_astar.cpp  map_astar_lab5_sim.cpp  map_cal.cpp  map_calTA.cpp  nav.cpp  tf_pos_sim.cpp  tf_pub.cpp  tf_pubTA.cpp
a_star_simulation/unitTest/: .gitignore  Makefile  readcsv.h  testMap  testMap.cpp  testMapNode  testMapNode.cpp  testOpenList  testOpenList.cpp  testRobot  testRobot.cpp
beginner_tutorials/: package.xml
beginner_tutorials/launch/: communication.launch  turtlemimic.launch
beginner_tutorials/msg/: Num.msg
beginner_tutorials/scripts/: listener.py  talker.py
beginner_tutorials/src/: listener.cpp  talker.cpp
final_sim/: CMakeLists.txt  package.xml
final_sim/config/: diffdrive.yaml
final_sim/launch/: hw_amcl_beam.launch  hw_amcl_ml.launch  total.launch
final_sim/map/: game2_resize.pgm
final_sim/urdf/minicar_description/: macros.xacro  minicar.gazebo  minicar.xacro
final_sim/world/: final_map_ver1
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/config/: minicar_control.yaml
gazebo_sim/launch/: final_sim.launch  hw_amcl.launch  hw_amcl_ml.launch  sim_amcl.launch  sim_gmapping.launch  test.launch
gazebo_sim/map/: game2.yaml  sim_map.pgm
gazebo_sim/world/: 402_test
lab1/: CMakeLists.txt
lab1/lab1_cpp/: README.md  package.xml
lab1/lab1_nodejs/: package.json
lab1/lab1_py/: package.xml
lab1/lab1_py/src/: turtle.py
lab1/launch/: run_square.launch
lab1/src/: turtleBoss.cpp
lab1_nodejs/: CMakeLists.txt  README.md  package.xml
lab1_nodejs/scripts/: turtleBoss.js
lab6/: CMakeLists.txt  package.xml  run.sh
lab6/launch/: lab6_amcl.launch  lab6_gmapping.launch
lab6/map/: 402_resize.yaml  505.pgm  505.yaml
lab6/src/: .lab6_nav.cpp.swp  lab6_Navigator.cpp  lab6_nav.cpp  odom_pub.cpp  pose_subscribe.cpp  tf_subscribe.cpp
