<?xml version="1.0"?>
<package>
  <name>lab1_nodejs</name>
  <version>0.0.0</version>
  <description>mobileRobot lab1 implemented in nodejs</description>

  <maintainer email="bobolee1239@gmail.com">Tsung-Han Lee</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="bobolee1239@gmail.com">Tsung-Han Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
